--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About - MyPortfolio</title>
+  <title>About - iamjo.</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -63,7 +63,7 @@
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
+            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -72,7 +72,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">iamjo.</a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -91,8 +91,8 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.</p>
+            <p class="mb-0">I’m Jo, a web developer and graphic designer
+              My strengths are branding, web design, web development, UI/UX design, content strategy and so on. I specialize in helping startups grow their business</p>
           </div>
 
         </div>
@@ -105,10 +105,10 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>WordPress</strong>
-                  <span class="ml-auto">80%</span>
+                  <span class="ml-auto">90%</span>
                 </div>
                 <div class="progress custom-progress">
-                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
               </li>
@@ -134,8 +134,8 @@
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Veu</strong>
-                  <span class="ml-auto">87%</span>
+                  <strong>Bootstrap</strong>
+                  <span class="ml-auto">90%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0"
@@ -144,8 +144,8 @@
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>Angular</strong>
-                  <span class="ml-auto">85%</span>
+                  <strong>Javascript</strong>
+                  <span class="ml-auto">80%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
@@ -154,8 +154,18 @@
               </li>
               <li class="mb-3">
                 <div class="d-flex mb-1">
-                  <strong>React</strong>
-                  <span class="ml-auto">88%</span>
+                  <strong>JQuery</strong>
+                  <span class="ml-auto">70%</span>
+                </div>
+                <div class="progress custom-progress">
+                  <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="88" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+              </li>
+              <li class="mb-3">
+                <div class="d-flex mb-1">
+                  <strong>Salesforce Commerce Cloud</strong>
+                  <span class="ml-auto">70%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="88" aria-valuemin="0"
@@ -166,7 +176,7 @@
           </div>
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
-            <p><img src="img/person_1_sq.jpg" alt="Image" class="img-fluid"></p>
+            <p><img src="img/profile.jpg" alt="Image" class="img-fluid"></p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
               molestias illo dolorem et, odio!</p>
             <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
@@ -175,7 +185,11 @@
               Vitae reiciendis quae ex.</p>
             <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
               nisi voluptatibus. Minus?</p>
-            <p><a href="#" class="readmore">Download my CV</a></p>
+            <p>
+              <a href="img/jnregudo-resume.pdf" download="resume" target="_blank" class="readmore">
+                Download my CV
+              </a>
+            </p>
           </div>
 
         </div>
@@ -188,7 +202,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright iamjo. All Rights Reserved</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
