--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Contact - MyPortfolio</title>
+  <title>Contact - iamjo.</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -62,7 +62,7 @@
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
+            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -71,7 +71,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">iamjo.</a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -142,15 +142,15 @@
             <ul class="list-unstyled">
               <li class="mb-3">
                 <strong class="d-block mb-1">Address</strong>
-                <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+                <span>Mahayahay A. Lopez Street Brgy. Calamba, Cebu City, Philippines 6000</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Phone</strong>
-                <span>+1 232 3235 324</span>
+                <span>+63 917 700 4085</span>
               </li>
               <li class="mb-3">
                 <strong class="d-block mb-1">Email</strong>
-                <span>youremail@domain.com</span>
+                <span>joanregudo@gmail.com</span>
               </li>
             </ul>
           </div>
@@ -166,7 +166,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright iamjo. All Rights Reserved</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
