--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MyPortfolio</title>
+  <title>iamjo</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -62,7 +62,7 @@
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
+            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -71,7 +71,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">iamjo.</a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -86,8 +86,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm Johan Stanworth</h2>
-            <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p>
+            <h2>Joan Regudo</h2>
+            <p class="mb-0">Web Developer &amp; Graphics Designer</p>
           </div>
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
@@ -149,7 +149,7 @@
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Amazon</h3>
-                <span>brandingn</span>
+                <span>branding</span>
               </div>
               <img class="img-fluid" src="img/img_6.jpg">
             </a>
@@ -205,49 +205,21 @@
             <span class="la la-cube la-3x mb-4"></span>
             <h4 class="h4 mb-2">Web Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-            <ul class="list-unstyled list-line">
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-              <li>Non pariatur nisi</li>
-              <li>Magnam soluta quod</li>
-              <li>Lorem ipsum dolor</li>
-              <li>Cumque quae aliquam</li>
-            </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-mobile la-3x mb-4"></span>
-            <h4 class="h4 mb-2">Mobile Applications</h4>
+            <h4 class="h4 mb-2">Digital Branding</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-            <ul class="list-unstyled list-line">
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-              <li>Non pariatur nisi</li>
-              <li>Magnam soluta quod</li>
-              <li>Lorem ipsum dolor</li>
-              <li>Cumque quae aliquam</li>
-            </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-image la-3x mb-4"></span>
-            <h4 class="h4 mb-2">Graphic Design</h4>
+            <h4 class="h4 mb-2">Wordpress Development</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-            <ul class="list-unstyled list-line">
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-              <li>Non pariatur nisi</li>
-              <li>Magnam soluta quod</li>
-              <li>Lorem ipsum dolor</li>
-              <li>Cumque quae aliquam</li>
-            </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-search la-3x mb-4"></span>
-            <h4 class="h4 mb-2">SEO</h4>
+            <h4 class="h4 mb-2">UI/UX Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-            <ul class="list-unstyled list-line">
-              <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-              <li>Non pariatur nisi</li>
-              <li>Magnam soluta quod</li>
-              <li>Lorem ipsum dolor</li>
-              <li>Cumque quae aliquam</li>
-            </ul>
           </div>
         </div>
       </div>
@@ -289,7 +261,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright iamjo. All Rights Reserved</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
