--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Services - MyPortfolio</title>
+  <title>Services - iamjo.</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -63,7 +63,7 @@
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
+            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -72,7 +72,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">iamjo.</a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -104,54 +104,26 @@
         <div class="container">
 
           <div class="row">
-
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <span class="la la-cube la-3x mb-4"></span>
               <h4 class="h4 mb-2">Web Design</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-              <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
-              </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <span class="la la-mobile la-3x mb-4"></span>
-              <h4 class="h4 mb-2">Mobile Applications</h4>
+              <h4 class="h4 mb-2">Digital Branding</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-              <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
-              </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <span class="la la-image la-3x mb-4"></span>
-              <h4 class="h4 mb-2">Graphic Design</h4>
+              <h4 class="h4 mb-2">Wordpress Development</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-              <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
-              </ul>
+              
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <span class="la la-search la-3x mb-4"></span>
-              <h4 class="h4 mb-2">SEO</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-              <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
-              </ul>
+              <h4 class="h4 mb-2">UI/UX Design</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p> 
             </div>
           </div>
         </div>
@@ -165,7 +137,7 @@
 
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="img/person_1.jpg" alt="Image" class="img-fluid">
+                <img src="img/profile.jpg" alt="Image" class="img-fluid">
                 <blockquote>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
                     officiis explicabo inventore.</p>
@@ -195,7 +167,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright iamjo. All Rights Reserved</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
