--- a/work-single.html
+++ b/work-single.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Portfolio Item - MyPortfolio</title>
+  <title>Portfolio Item - iamjo.</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -63,7 +63,7 @@
         <div class="col-md-4 d-none d-md-block">
           <h3>Hire Me</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
+            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -72,7 +72,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">iamjo.</a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -159,16 +159,16 @@
                   <h3>Build Indoo</h3>
                   <span>Photography</span>
                 </div>
-                <img class="img-fluid" src="img/img_2.jpg">
+                <img class="img-fluid" src="img/img_3.jpg">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Cocooil</h3>
+                  <h3>Logo Design</h3>
                   <span>Branding</span>
                 </div>
-                <img class="img-fluid" src="img/img_3.jpg">
+                <img class="img-fluid" src="img/img_2.jpg">
               </a>
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -241,7 +241,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright iamjo. All Rights Reserved</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
