--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Build Indoo</h3>
-                <span>Photography</span>
+                <h3>Business Card</h3>
+                <span>Design</span>
               </div>
               <img class="img-fluid" src="img/img_2.jpg">
             </a>
@@ -139,7 +139,7 @@
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Kitchen Sink</h3>
+                <h3>Beach Life</h3>
                 <span>Photography</span>
               </div>
               <img class="img-fluid" src="img/img_5.jpg">
