--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Nike Shoe</h3>
-                <span>Design</span>
+                <h3>E-commerce website</h3>
+                <span>Web</span>
               </div>
               <img class="img-fluid" src="img/img_4.jpg">
             </a>
