--- a/services.html
+++ b/services.html
@@ -44,26 +44,27 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li class="active"><a href="services.html">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="works.html">Works</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
           <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
+            <!-- <span class="icofont-twitter text-white mt-2 mr-3"></span>
             <div>
               <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
                   officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
+          <h3>Let's Make Something Great Together!</h3>
+          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
+            <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
+            <span class="la la-at la-1x mr-2"></span><a href="mailto:joanregudo@gmail.com">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -111,7 +112,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <span class="la la-mobile la-3x mb-4"></span>
-              <h4 class="h4 mb-2">Digital Branding</h4>
+              <h4 class="h4 mb-2">Digital Marketing</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
@@ -179,10 +180,10 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
-          <a href="#"><span class="icofont-behance"></span></a>
+          <a href="https://www.facebook.com/joan.n.regudo" target="_blank"><span class="icofont-facebook"></span></a>
+          <a href="https://www.instagram.com/joan.regudo" target="_blank"><span class="icofont-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/joan-regudo" target="_blank"><span class="icofont-linkedin"></span></a>
+          <a href="https://www.behance.net/joanregudo" target="_blank"><span class="icofont-behance"></span></a>
         </div>
       </div>
     </div>
