--- a/about.html
+++ b/about.html
@@ -44,8 +44,8 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About Me</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="works.html">Works</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -53,17 +53,18 @@
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
           <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
+            <!-- <span class="icofont-twitter text-white mt-2 mr-3"></span>
             <div>
               <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
                   officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
+          <h3>Let's Make Something Great Together!</h3>
+          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
+            <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
+            <span class="la la-at la-1x mr-2"></span><a href="mailto:joanregudo@gmail.com">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -92,7 +93,7 @@
 
             <h2>About Me</h2>
             <p class="mb-0">I’m Jo, a web developer and graphic designer
-              My strengths are branding, web design, web development, UI/UX design, content strategy and so on. I specialize in helping startups grow their business</p>
+              My strengths are branding, web design, web development, UI/UX design, Digital Marketing and so on. I specialize in helping startups grow their business</p>
           </div>
 
         </div>
@@ -177,15 +178,6 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="img/profile.jpg" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dignissimos delectus minima reprehenderit
-              molestias illo dolorem et, odio!</p>
-            <p>Fuga fugit distinctio delectus iure vitae consequatur excepturi, mollitia, consectetur molestias sapiente
-              rem consequuntur, illum adipisci, sed obcaecati!</p>
-            <p>Ex, dolorem qui voluptas reprehenderit provident, ad ipsum iure a consequatur voluptatem incidunt nobis.
-              Vitae reiciendis quae ex.</p>
-            <p>Optio consectetur culpa nemo, fugit pariatur veniam voluptate laudantium rerum fuga dolor in maiores ea
-              nisi voluptatibus. Minus?</p>
-            <p>
               <a href="img/jnregudo-resume.pdf" download="resume" target="_blank" class="readmore">
                 Download my CV
               </a>
@@ -214,10 +206,10 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
-          <a href="#"><span class="icofont-behance"></span></a>
+          <a href="https://www.facebook.com/joan.n.regudo" target="_blank"><span class="icofont-facebook"></span></a>
+          <a href="https://www.instagram.com/joan.regudo" target="_blank"><span class="icofont-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/joan-regudo" target="_blank"><span class="icofont-linkedin"></span></a>
+          <a href="https://www.behance.net/joanregudo" target="_blank"><span class="icofont-behance"></span></a>
         </div>
       </div>
     </div>
