--- a/contact.html
+++ b/contact.html
@@ -43,26 +43,27 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="works.html">Works</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
           <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
+            <!-- <span class="icofont-twitter text-white mt-2 mr-3"></span>
             <div>
               <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
                   officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
+          <h3>Let's Make Something Great Together!</h3>
+          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
+            <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
+            <span class="la la-at la-1x mr-2"></span><a href="mailto:joanregudo@gmail.com">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -88,8 +89,7 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Contact</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.
+            <p class="mb-0">Have a question or want to work together?
             </p>
           </div>
 
@@ -178,10 +178,10 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
-          <a href="#"><span class="icofont-behance"></span></a>
+          <a href="https://www.facebook.com/joan.n.regudo" target="_blank"><span class="icofont-facebook"></span></a>
+          <a href="https://www.instagram.com/joan.regudo" target="_blank"><span class="icofont-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/joan-regudo" target="_blank"><span class="icofont-linkedin"></span></a>
+          <a href="https://www.behance.net/joanregudo" target="_blank"><span class="icofont-behance"></span></a>
         </div>
       </div>
     </div>
