--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
         </div>
         <div class="col-md-6 d-none d-md-block  mr-auto">
           <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
+            <!-- <span class="icofont-twitter text-white mt-2 mr-3"></span>
             <div>
               <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
                   officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">joanregudo@gmail.com</a></p>
+          <h3>Let's Make Something Great Together!</h3>
+          <p><span class="la la-map-marked-alt la-1x mr-2"></span>A. Lopez Street, Cebu City, Philippines<br>
+            <span class="la la-mobile la-1x mr-2"></span>+63 917 700 4085<br>
+            <span class="la la-at la-1x mr-2"></span><a href="mailto:joanregudo@gmail.com">joanregudo@gmail.com</a></p>
         </div>
       </div>
 
@@ -85,31 +86,32 @@
     <div class="site-section site-portfolio">
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+          <div class="col-md-12 col-lg-5 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Joan Regudo</h2>
             <p class="mb-0">Web Developer &amp; Graphics Designer</p>
           </div>
-          <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-12 col-lg-7 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".web">Web</a>
               <a href="#" data-filter=".design">Design</a>
               <a href="#" data-filter=".branding">Branding</a>
+              <a href="#" data-filter=".digital-marketing">Digital Marketing</a>
               <a href="#" data-filter=".photography">Photography</a>
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item digital-marketing design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Boxed Water</h3>
-                <span>Web</span>
+                <h3>Poster</h3>
+                <span>Digital Marketing</span>
               </div>
               <img class="img-fluid" src="img/img_1.jpg">
             </a>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item design branding col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Business Card</h3>
@@ -118,16 +120,16 @@
               <img class="img-fluid" src="img/img_2.jpg">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Cocooil</h3>
-                <span>Branding</span>
+                <h3>Opthalmic</h3>
+                <span>Web</span>
               </div>
               <img class="img-fluid" src="img/img_3.jpg">
             </a>
           </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item web design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>E-commerce website</h3>
@@ -145,20 +147,53 @@
               <img class="img-fluid" src="img/img_5.jpg">
             </a>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="work-single.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Amazon</h3>
-                <span>branding</span>
+                <h3>Video Ads</h3>
+                <span>Digital Marketing</span>
               </div>
-              <img class="img-fluid" src="img/img_6.jpg">
+              <video width="490" height="490" controls class="img-fluid">
+                <source src="video/skyline.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+              </video>
+            </a>
+          </div>
+          <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Video Ads</h3>
+                <span>Digital Marketing</span>
+              </div>
+              <video width="490" height="490" controls class="img-fluid">
+                <source src="video/bayanihan.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+              </video>
+            </a>
+          </div>
+          <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Logo</h3>
+                <span>Branding</span>
+              </div>
+              <img class="img-fluid" src="img/img_7.jpg">
+            </a>
+          </div>
+          <div class="item branding designs digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="work-single.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Promotions</h3>
+                <span>Branding / Marketing</span>
+              </div>
+              <img class="img-fluid" src="img/img_8.jpg">
             </a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="site-section">
+    <!-- <div class="site-section">
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
@@ -188,7 +223,7 @@
 
         </div>
       </div>
-    </div> 
+    </div>  -->
 
 
     <div class="site-section">
@@ -208,7 +243,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-mobile la-3x mb-4"></span>
-            <h4 class="h4 mb-2">Digital Branding</h4>
+            <h4 class="h4 mb-2">Digital Marketing</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
@@ -217,7 +252,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <span class="la la-search la-3x mb-4"></span>
+            <span class="la la-pen-nib la-3x mb-4"></span>
             <h4 class="h4 mb-2">UI/UX Design</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
           </div>
@@ -273,10 +308,10 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <a href="#"><span class="icofont-dribbble"></span></a>
-          <a href="#"><span class="icofont-behance"></span></a>
+          <a href="https://www.facebook.com/joan.n.regudo" target="_blank"><span class="icofont-facebook"></span></a>
+          <a href="https://www.instagram.com/joan.regudo" target="_blank"><span class="icofont-instagram"></span></a>
+          <a href="https://www.linkedin.com/in/joan-regudo" target="_blank"><span class="icofont-linkedin"></span></a>
+          <a href="https://www.behance.net/joanregudo" target="_blank"><span class="icofont-behance"></span></a>
         </div>
       </div>
     </div>
