--- a/works.html
+++ b/works.html
@@ -43,10 +43,10 @@
       <div class="row align-items-start">
         <div class="col-md-2">
           <ul class="custom-menu">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="works.html">Works</a></li>
+            <li class="active"><a href="works.html">Works</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -105,7 +105,7 @@
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item digital-marketing design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Poster</h3>
                 <span>Digital Marketing</span>
@@ -114,7 +114,7 @@
             </a>
           </div>
           <div class="item design branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Business Card</h3>
                 <span>Design</span>
@@ -123,7 +123,7 @@
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Opthalmic</h3>
                 <span>Web</span>
@@ -132,7 +132,7 @@
             </a>
           </div>
           <div class="item web design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>E-commerce website</h3>
                 <span>Web</span>
@@ -141,7 +141,7 @@
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Beach Life</h3>
                 <span>Photography</span>
@@ -150,7 +150,7 @@
             </a>
           </div>
           <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Video Ads</h3>
                 <span>Digital Marketing</span>
@@ -162,7 +162,7 @@
             </a>
           </div>
           <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Video Ads</h3>
                 <span>Digital Marketing</span>
@@ -174,7 +174,7 @@
             </a>
           </div>
           <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Logo</h3>
                 <span>Branding</span>
@@ -183,7 +183,7 @@
             </a>
           </div>
           <div class="item branding designs digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Promotions</h3>
                 <span>Branding / Marketing</span>
