--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">iamjo.</a>
+      <a class="navbar-brand" href="#">iamjo.</a>
 
       <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -103,7 +103,7 @@
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item digital-marketing design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Poster</h3>
                 <span>Digital Marketing</span>
@@ -112,7 +112,7 @@
             </a>
           </div>
           <div class="item design branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Business Card</h3>
                 <span>Design</span>
@@ -121,7 +121,7 @@
             </a>
           </div>
           <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Opthalmic</h3>
                 <span>Web</span>
@@ -130,7 +130,7 @@
             </a>
           </div>
           <div class="item web design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>E-commerce website</h3>
                 <span>Web</span>
@@ -139,7 +139,7 @@
             </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Beach Life</h3>
                 <span>Photography</span>
@@ -148,7 +148,7 @@
             </a>
           </div>
           <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Video Ads</h3>
                 <span>Digital Marketing</span>
@@ -160,7 +160,7 @@
             </a>
           </div>
           <div class="item digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Video Ads</h3>
                 <span>Digital Marketing</span>
@@ -172,7 +172,7 @@
             </a>
           </div>
           <div class="item branding design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Logo</h3>
                 <span>Branding</span>
@@ -181,7 +181,7 @@
             </a>
           </div>
           <div class="item branding designs digital-marketing col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Promotions</h3>
                 <span>Branding / Marketing</span>
