--- a/about.html
+++ b/about.html
@@ -93,7 +93,9 @@
 
             <h2>About Me</h2>
             <p class="mb-0">I’m Jo, a web developer and graphic designer
-              My strengths are branding, web design, web development, UI/UX design, Digital Marketing and so on. I specialize in helping startups grow their business</p>
+              My strengths are branding, web design, web development, UI/UX design, Digital Marketing and so on. 
+              I specialise in creating marketing websites for great individuals and small-medium sized businesses, helping them to grow their business.
+            </p>
           </div>
 
         </div>
