--- a/index.html
+++ b/index.html
@@ -231,20 +231,20 @@
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
             <h3 class="h3 heading">My Services</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <p>Works that I am passionate about</p>
           </div>
         </div>
         <div class="row">
 
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-cube la-3x mb-4"></span>
-            <h4 class="h4 mb-2">Web Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <h4 class="h4 mb-2">Responsive Web Design</h4>
+            <p>Responsive web pages that adapt automatically to any device users are accessing.</p>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-mobile la-3x mb-4"></span>
             <h4 class="h4 mb-2">Digital Marketing</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <p>Create marketing strategy by utilizing internet and online based digital technologies to promote products and services</p>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-image la-3x mb-4"></span>
@@ -254,7 +254,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-pen-nib la-3x mb-4"></span>
             <h4 class="h4 mb-2">UI/UX Design</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+            <p>Do professional design to take your companies personality and translate it to visual design.</p>
           </div>
         </div>
       </div>
@@ -269,8 +269,7 @@
             <div class="testimonial">
               <img src="img/person_1.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
+                <p>Professional and commitment to making a happy customer. Work came out Perfect!</p>
               </blockquote>
               <p>&mdash; Jean Hicks</p>
             </div>
@@ -280,13 +279,11 @@
             <div class="testimonial">
               <img src="img/person_2.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
+                <p>Great work! She was responsive and organized. Thanks for the hardwork.</p>
               </blockquote>
               <p>&mdash; Chris Stanworth</p>
             </div>
           </div>
-
         </div>
 
       </div>
