--- a/services.html
+++ b/services.html
@@ -92,8 +92,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>My Services</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-              explicabo inventore.</p>
+            <p>Works that I am passionate about</p>
 
           </div>
 
@@ -107,13 +106,13 @@
           <div class="row">
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <span class="la la-cube la-3x mb-4"></span>
-              <h4 class="h4 mb-2">Web Design</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+              <h4 class="h4 mb-2">Responsive Web Design</h4>
+              <p>Responsive web pages that adapt automatically to any device users are accessing.</p>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <span class="la la-mobile la-3x mb-4"></span>
               <h4 class="h4 mb-2">Digital Marketing</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+              <p>Create marketing strategy by utilizing internet and online based digital technologies to promote products and services</p>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <span class="la la-image la-3x mb-4"></span>
@@ -124,7 +123,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <span class="la la-search la-3x mb-4"></span>
               <h4 class="h4 mb-2">UI/UX Design</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p> 
+              <p>Do professional design to take your companies personality and translate it to visual design.</p> 
             </div>
           </div>
         </div>
@@ -138,10 +137,9 @@
 
             <div class="testimonial-wrap">
               <div class="testimonial">
-                <img src="img/profile.jpg" alt="Image" class="img-fluid">
+                <img src="img/person_1.jpg" alt="Image" class="img-fluid">
                 <blockquote>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                    officiis explicabo inventore.</p>
+                  <p>Professional and commitment to making a happy customer. Work came out Perfect!</p>
                 </blockquote>
                 <p>&mdash; Jean Hicks</p>
               </div>
@@ -151,8 +149,7 @@
               <div class="testimonial">
                 <img src="img/person_2.jpg" alt="Image" class="img-fluid">
                 <blockquote>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                    officiis explicabo inventore.</p>
+                  <p>Great work! She was responsive and organized. Thanks for the hardwork.</p>
                 </blockquote>
                 <p>&mdash; Chris Stanworth</p>
               </div>
