--- a/works.html
+++ b/works.html
@@ -176,7 +176,7 @@
                 <h3>Video Ads</h3>
                 <span>Digital Marketing</span>
               </div>
-              <video width="490" height="490" controls class="img-fluid">
+              <video width="490" height="490" poster="img/img_1.jpg" controls class="img-fluid">
                 <source src="video/bayanihan.mp4" type="video/mp4">
                   Your browser does not support the video tag.
               </video>
@@ -205,8 +205,7 @@
             <div class="testimonial">
               <img src="img/person_1.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
+                <p>Professional and commitment to making a happy customer. Work came out Perfect!</p>
               </blockquote>
               <p>&mdash; Jean Hicks</p>
             </div>
@@ -216,8 +215,7 @@
             <div class="testimonial">
               <img src="img/person_2.jpg" alt="Image" class="img-fluid">
               <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
+                <p>Great work! She was responsive and organized. Thanks for the hardwork.</p>
               </blockquote>
               <p>&mdash; Chris Stanworth</p>
             </div>
