--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <span class="la la-image la-3x mb-4"></span>
               <h4 class="h4 mb-2">Wordpress Development</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
+              <p>Building custom website using wordpress that allows to easily make changes on pages</p>
               
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
