--- a/services.html
+++ b/services.html
@@ -121,7 +121,7 @@
               
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-              <span class="la la-search la-3x mb-4"></span>
+              <span class="la la-pen-nib la-3x mb-4"></span>
               <h4 class="h4 mb-2">UI/UX Design</h4>
               <p>Do professional design to take your companies personality and translate it to visual design.</p> 
             </div>
