--- a/contact.html
+++ b/contact.html
@@ -86,18 +86,18 @@
     <div class="site-section pb-0 site-portfolio">
       <div class="container">
 
-        <div class="row mb-5 align-items-end">
+        <!-- <div class="row mb-5 align-items-end">
           <div class="col-md-6" data-aos="fade-up">
             <h2>Contact</h2>
             <p class="mb-0">Have a question or want to work together?
             </p>
           </div>
 
-        </div>
+        </div> -->
 
         <div class="row">
           <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up">
-            
+<!--             
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               
               <div class="row">
@@ -134,7 +134,8 @@
                 </div>
               </div>
 
-            </form>
+            </form> -->
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScRa4VKC98AM_92PAizSaFL-KzX1vBkaN31q-wKekFr388zGA/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
           </div>
 
